// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Summary should render correctly 1`] = `
<div
  className="page-header"
>
  <div
    className="wrapper"
  >
    <h1
      className="page-header__title"
    >
      Viewing 
      <span>
        1
      </span>
       expense
       totalling 
      <span>
        $100,000.00
      </span>
    </h1>
    <div
      className="page-header__actions"
    >
      <Link
        className="btn"
        replace={false}
        to="/create"
      >
        Add Expense
      </Link>
    </div>
  </div>
</div>
`;

exports[`Summary should render correctly for plural version 1`] = `
<div
  className="page-header"
>
  <div
    className="wrapper"
  >
    <h1
      className="page-header__title"
    >
      Viewing 
      <span>
        2
      </span>
       expense
      s
       totalling 
      <span>
        $100.10
      </span>
    </h1>
    <div
      className="page-header__actions"
    >
      <Link
        className="btn"
        replace={false}
        to="/create"
      >
        Add Expense
      </Link>
    </div>
  </div>
</div>
`;
